--- a/views/login.handlebars
+++ b/views/login.handlebars
@@ -16,7 +16,7 @@
             <label for="password-login" class="form-label fs-3 fw-semibold">Password</label>
             <input type="password" class="form-control" id="password-login">
           </div>
-          <button type="submit" class="btn btn-form fs-3">Submit</button>
+          <button type="submit" class="btn btn-form fs-3">Login</button>
         </form>
       </div>
 
