--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -14,10 +14,10 @@
 </head>
 
 <body>
-  <div class="flex-column justify-space-around">
-    <header class="display-flex justify-space-between align-center p-2">
+  <div class="flex-column justify-content-around">
+    <header class="d-flex justify-content-between align-items-center p-2">
       <h1>
-        <a href="/">Make a Reservation!</a>
+        <a  href="/">Make a Reservation!</a>
       </h1>
       <nav>
         <!-- Conditionally render login or logout links -->
@@ -25,11 +25,11 @@
         <a href="/profile">Profile</a> |
         <button class="no-button" id="logout">Logout</button>
         {{else}}
-        <a href="/login">Login</a>
+        <a class="fs-3" href="/login">Login</a>
         {{/if}}
       </nav>
     </header>
-    <main class="container container-fluid mt-5">
+    <main class="p-5 bg-black">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
