--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -29,7 +29,7 @@
         {{/if}}
       </nav>
     </header>
-    <main class="p-5 bg-black">
+    <main class="p-5 bg-white">
       <!-- Render the sub layout -->
       {{{ body }}}
     </main>
