--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
 body {
-  font-family: 'Whisper', cursive;
+  font-family: 'Cormorant Garamond', serif;
 }
 
 a {
@@ -15,7 +15,7 @@ header, .project:not(:last-child) {
   border: none;
   padding: 0;
   cursor: pointer;
-  color: #1b89bc;
+  color: black;
   text-decoration: none;
   font-size: 100%;
 }
