code for nodemailer added

--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -48,7 +48,7 @@
       {{/if}}
     </div>
 
-    {{#unless is_admin}}
+    {{!-- {{#unless is_admin}} --}}
     <!-- Right Side: Available Reservation Time Slots -->
     <div class="col-md-6">
       <h2>Reservations</h2>
@@ -78,7 +78,7 @@
       <button id="make-reservation">Make a Reservation</button>
     </div>
   </div>
-  {{/unless}}
+  {{!-- {{/unless}} --}}
 </div>
 
 <script src="./js/reservation.js"></script>
