--- a/views/homepage.handlebars
+++ b/views/homepage.handlebars
@@ -22,3 +22,17 @@
   </div>
 </div>
 {{/each}} --}}
+<div class="row align-items-center">
+
+  <div class="col-md-6 col-sm-12 homepage-background">
+  </div>
+  <div class="col-md-6 col-sm-12">
+    <h2 class="text-white">
+      Welcome to feastFinder
+    </h2>
+    <p class="text-white">Schedule your feast with friends and enjoy the seemless experience all in one app. Through our
+      app, you can easily make and cancel your fine dining reservations. After you schedule your reservation, you will
+      be sent a confirmation email so you can have the peace of mind that your reservation has been properly placed.
+    </p>
+  </div>
+</div>
