--- a/views/profile.handlebars
+++ b/views/profile.handlebars
@@ -36,9 +36,9 @@
       <div class="card mb-3">
         <div class="card-body">
         {{!-- <p>Reservation ID: {{id}}</p> --}}
-        <p>Full Name: {{full_name}}</p>
-        <p>Special Request: {{special_request}}</p>
-        <p>Guest Count: {{guest_counts}}</p>
+        <p> <span class="fw-semibold">Full Name:</span> {{full_name}}</p>
+        <p><span class="fw-semibold">Special Request:</span> {{special_request}}</p>
+        <p><span class="fw-semibold">Guest Count:</span> {{guest_counts}}</p>
         <button class="cancel-reservation btn btn-form fw-bold" data-id="{{id}}">Cancel Reservation</button>
 
         </div>
